# python-ovmclient

./: README.rst  setup.cfg  setup.py
ovmclient/: __init__.py  base.py  connection.py  constants.py  exception.py
