[metadata]
name = python-ovmclient
summary = Python Oracle VM Client
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: Console

[files]
packages =
    ovmclient

[wheel]
universal = 1
